Quorum/Library/Tests/TypeChecker/Pass/NumberEquals.quorum
class Main
    action Main
        Number t 
        t:SetValue(5.5)
        number p = 5.5

        output t:Equals(5.2)
        output p:Equals(5.5)
    end
end