Quorum/Library/Tests/TypeChecker/Fail/ExpAssignNumberTextObjField.quorum
class main
    Text t
    number num = 0.0
    action Main
        t:SetValue(true)
        num = cast(number, t)
    end
end